<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.studium.davinciapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_pintor"
        android:name="es.studium.davinciapp.ui.pintor.Pintor"
        android:label="@string/menu_pintor"
        tools:layout="@layout/pintor_fragment" />

    <fragment
        android:id="@+id/nav_escultor"
        android:name="es.studium.davinciapp.ui.escultor.Escultor"
        android:label="@string/menu_escultor"
        tools:layout="@layout/escultor_fragment" />
    <fragment
        android:id="@+id/nav_cientifico"
        android:name="es.studium.davinciapp.ui.cientifico.Cientifico"
        android:label="@string/menu_cientifico"
        tools:layout="@layout/cientifico_fragment" />
    <fragment
        android:id="@+id/nav_inventor"
        android:name="es.studium.davinciapp.ui.inventor.Inventor"
        android:label="@string/menu_inventor"
        tools:layout="@layout/inventor_fragment" />
</navigation>